--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,83 @@ header .icons #menu-bars{
     line-height: 1.5;
 }
 
+.dishes .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem,1fr));
+    gap: 1.5rem;
+}
 
+.dishes .box-container .box{
+    padding: 2.5rem;
+    background: #fff;
+    border-radius: .5rem;
+    border: .1rem solid rgba(0,0,0,0.2);
+    box-shadow: var(--box-shadow);
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.dishes .box-container .box .fa-heart,
+.dishes .box-container .box .fa-eye{
+    position: absolute;
+    top: 1.5rem;
+    background: #eee;
+    border-radius: 50%;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.dishes .box-container .box .fa-heart{
+    right: -15rem;
+}
+
+.dishes .box-container .box .fa-eye{
+    left: -15rem;
+}
+
+.dishes .box-container .box:hover .fa-heart{
+    right: 1.5rem;
+}
+
+.dishes .box-container .box:hover .fa-eye{
+    left: 1.5rem;
+}
+
+.dishes .box-container .box .fa-heart:hover,
+.dishes .box-container .box .fa-eye:hover{
+    background: var(--green);
+    color: #fff;
+}
+
+.dishes .box-container .box img{
+    height: 17rem;
+    width: 17rem;
+    margin: 1rem 0;
+}
+
+.dishes .box-container .box h3{
+    color: var(--black);
+    font-size: 2.5rem;
+}
+
+.dishes .box-container .box .stars{
+    padding: 1rem 0;    
+}
+
+.dishes .box-container .box .stars i{
+    font-size: 1.7rem;
+    color: var(--green);
+}
+
+.dishes .box-container .box span{
+    color: var(--green);
+    margin-right: 1rem;
+    font-size: 2.5rem;
+}
 
 /* Media Queries */
 @media (max-width: 991px){
@@ -234,6 +310,10 @@ header .icons #menu-bars{
 
     header{
         padding: 1rem 2rem;
+    }
+
+    section{
+        padding: 2rem;
     }
 }
 
@@ -273,5 +353,10 @@ header .icons #menu-bars{
 @media (max-width: 991px){
     html{
         font-size: 50%
+    }
+
+    .dishes .box-container .box img{
+        height: auto;
+        width: 100%;
     }
 }
